Update all the path and tests regarding activity